src/static/styles/ui.scss
/* ... */
.ui-group__headerButton {
    font-family: var(--font-main);
    background: none;
    width: 100%;
    color: var(--text-colors-primary);

    transition: all 150ms ease-in-out;
    border: var(--border-width-medium) solid transparent;
    // Remove border from padding.
    padding: calc(var(--spacings-xLarge) - 2 * var(--border-width-medium));
}
.ui-group__headerButton:enabled:hover {
    background: var(--colors-background_2-backgroundColor);
    color: var(--colors-background_2-color);
    cursor: pointer;
}
.ui-group__headerButton:enabled:focus {
    outline: 0;
    border: var(--border-width-medium) solid
        var(--colors-primary_2-backgroundColor);
}
.ui-group__headerButton:enabled:active {
    background: var(--colors-background_3-backgroundColor);
    color: var(--colors-background_3-color);
}
.ui-group__headerButton__content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    text-align: left;

    svg,
    path {
        fill: currentColor;
    }
}
.ui-group__headerButton__content__editText {
    display: flex;

    svg {
        margin-left: var(--spacings-medium);
    }
}

@media (max-width: 500px) {
    .ui-group__headerButton__content__editText__text {
        position: absolute;
        clip: rect(0 0 0 0);
    }
}

.ui-ticketDetails {
    width: 100%;
    border-radius: var(--border-radius-regular);
    color: var(--colors-background_0-color);
    margin-bottom: var(--spacings-medium);

    --minWidthItems: 200px;
    button {
        margin-top: var(--border-width-slim);
    }
}
.ui-ticketDetails__header {
    margin: 0;
    padding: 0;
}
.ui-ticketDetails__content {
    overflow: hidden;
    max-height: 0;
    transition: max-height 300ms ease;
}
.ui-ticketDetails__content--open {
    max-height: 320px;
    overflow: auto;
}
.ui-ticketDetails__metaDataitem {
    padding-top: var(--spacings-xLarge);
    margin: var(--border-width-slim) 0;

    background-position-y: top;
    background-position-x: left, right;
    background-size: 50% 100%;
    background-repeat: no-repeat;

    border-radius: var(--border-radius-regular);
    transition: border-radius 400ms ease;

    background-image: radial-gradient(
            circle at 0 0,
            rgba(0, 0, 0, 0) 15px,
            var(--colors-background_0-backgroundColor) 15px
        ),
        radial-gradient(
            circle at 100% 0,
            rgba(0, 0, 0, 0) 15px,
            var(--colors-background_0-backgroundColor) 15px
        );

    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(var(--minWidthItems), 1fr));

    .ui-labelItem {
        margin: 0;
    }

    > :first-child {
        padding-top: 0;
    }
}
.ui-ticketDetails__metaDataitem--open {
    border-radius: 0;
}
.ui-ticketDetails__metaDataitem--padded {
    padding: var(--spacings-xLarge);
}

.ui-ticketDetails__item {
    background: var(--colors-background_0-backgroundColor);
    padding: var(--spacings-xLarge);
}
.ui-ticketDetails__item + .ui-ticketDetails__item {
    margin-top: var(--border-width-slim);
}
.ui-ticketDetails__item:last-child {
    border-bottom-left-radius: var(--border-radius-regular);
    border-bottom-right-radius: var(--border-radius-regular);
}
.ui-ticketDetails__item--horizontal {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(var(--minWidthItems), 1fr));

    .ui-labelItem {
        margin: 0;
    }
}
.ui-ticketDetails__item--statusLine {
    padding: 0;
    grid-template-columns: 1fr 1fr auto;

    .ui-labelItem {
        padding: var(--spacings-xLarge);
    }
    .ui-labelItem + .ui-labelItem {
        border-left: 1px solid var(--border-primary);
    }
}
@media (max-width: 500px) {
    .ui-ticketDetails__item--statusLine {
        grid-template-columns: 1fr;
        padding: var(--spacings-xLarge);

        .ui-labelItem {
            padding: 0;
        }
        .ui-labelItem + .ui-labelItem {
            border-left: 0;
        }
    }
}

.ui-ticketDetails__headerButton {
    font-family: var(--font-main);
    background-color: transparent;
    display: flex;
    width: 100%;
    border: 0;
    justify-content: space-between;
    align-items: center;
    font-weight: normal;
    color: var(--text-colors-primary);

    transition: all 150ms ease-in-out;
    padding: var(--spacings-xLarge);
    border-radius: var(--border-radius-regular);

    position: relative;

    & > * {
        position: relative;
        z-index: 2;
    }

    cursor: pointer;

    background-position: bottom left, bottom right;
    background-size: 50% 100%;
    background-repeat: no-repeat;

    background-image: radial-gradient(
            circle at 0 100%,
            rgba(0, 0, 0, 0) 15px,
            var(--colors-background_0-backgroundColor) 15px
        ),
        radial-gradient(
            circle at 100% 100%,
            rgba(0, 0, 0, 0) 15px,
            var(--colors-background_0-backgroundColor) 15px
        );

    &::after {
        opacity: 0;
        border-radius: var(--border-radius-regular);
        position: absolute;
        content: '';
        display: block;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        z-index: 1;

        transition: opacity 150ms ease;

        background-position: bottom left, bottom right;
        background-size: 50% 100%;
        background-repeat: no-repeat;

        background-image: radial-gradient(
                circle at 0 100%,
                rgba(0, 0, 0, 0) 15px,
                var(--colors-background_2-backgroundColor) 15px
            ),
            radial-gradient(
                circle at 100% 100%,
                rgba(0, 0, 0, 0) 15px,
                var(--colors-background_2-backgroundColor) 15px
            );
        color: var(--colors-background_2-color);
    }
}
.ui-ticketDetails__headerButton:hover::after {
    opacity: 1;
}
/* ... */

